Fix Angola logo visibility below fixed header

--- a/css/pages.css
+++ b/css/pages.css
@@ -267,7 +267,8 @@
 /* Capoeira Angola Page */
 .angola-logo-section {
   background: #fff;
-  padding: 120px 0 30px;
+  padding: 180px 0 30px;
+  margin-top: -100px;
 }
 
 .angola-logo-section .intro-logo {
